--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ main {
 nav {
     height: 100px;
     padding: 1rem;
-    /* box-shadow: 0 7px 10px var(--main-color); */
-    /* background-color: rgb(255, 255, 255); */
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 nav img {
@@ -77,7 +78,7 @@ nav img {
 }
 
 .selected-o {
-    box-shadow: inset 0 0 30px #378dda ;
+    box-shadow: inset 0 0 30px #378dda;
     /* box-shadow: rgba(72, 135, 202, 0.8) 0 0 90px 33px; */
 }
 
@@ -86,7 +87,7 @@ nav img {
     /* position: relative; */
     /* bottom: 17%; */
     font-family: monospace, sans-serif;
-    font-size: 2rem;
+    font-size: 1.3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -99,21 +100,26 @@ nav img {
     text-shadow: 5px 5px 1px rgba(48, 47, 47, 0.411);
 }
 
-.score-x  span{
+.score-x span {
     color: #d8562b;
 }
-.score-o  span{
+
+.score-o span {
     color: #378dda;
 }
 
-.circle{
+.circle {
     width: 80px;
     height: 80px;
-    border: 1rem solid #378dda ;
+    border: 14px solid #378dda;
     border-radius: 50%;
     border-style: dashed;
 }
 
-.dim{
+.dim {
     opacity: 50%;
+}
+
+.reset-button{
+    padding: 1rem;
 }
